--- a/templates/yourtasks.html
+++ b/templates/yourtasks.html
@@ -25,7 +25,7 @@
       </tr>
 
       {% for current in tasks %}
-        <form  method='POST' action='/yourtasks/' enctype="multipart/form-data">
+        <form  method='POST' action='.' enctype="multipart/form-data">
           {% csrf_token %}
 
          <tr>
