add tests to validate redirection on fasttask creation
added test for task redirection when fastask is stopped

tests for tasks redirection has been renamed.

added test to verify all new task have a default timer

fix test that fail by default timer creation. improve default timer creation

add test to verify that a timer with valid final_time was created on Task.start method.

add code to create a Timer with a final_time equal to its initial_time on Task.start method.

fix error on stop task

modify some test related to task redirection. add code for passing TaskRedirectionTests.

Add test for Timer Creation.

add code to passing TimerCreationTest

--- a/templates/yourtasks.html
+++ b/templates/yourtasks.html
@@ -64,7 +64,7 @@
         <th>Action</th>
       </tr>
 
-      <form  method='POST' action='/fasttask/'  enctype="multipart/form-data">
+      <form  method='POST' action='/fasttask/{{current_list}}'  enctype="multipart/form-data">
         {% csrf_token %}
 
         <tr>
