add report for tasks between given dates

--- a/templates/report_home.html
+++ b/templates/report_home.html
@@ -18,12 +18,12 @@
                     
                     <div class="form-group">
                         <label> Fecha Inicio</label>
-                        <input class="form-control" type="date" name="begin" required/>
+                        <input class="form-control" type="datetime-local" name="begin" required/>
                     </div>
 
                     <div class="form-group">
                         <label> Fecha Fin</label>
-                        <input class="form-control" type="date" name="end" required/>
+                        <input class="form-control" type="datetime-local" name="end" required/>
                     </div>
 
                     <div class="form-group">
