--- a/templates/report_project.html
+++ b/templates/report_project.html
@@ -12,11 +12,13 @@
 
 		<thead>
 			<th>Nombre</th>
+			<th>Horas</th>
 		</thead>
 		
 		{% for task in tasks %}
 		<tr>
 			<td>{{ task.name }}</td>
+			<td>{{ task.hours }}</td>
 		</tr>
 		{% endfor %}
 
